k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: medibook
  labels:
    app.kubernetes.io/name: medibook
    environment: production
